# Flight-Data-Calculation-opensource

./: .env.example  .gitignore  LICENSE  Makefile  README.md  example_code.py  pyproject.toml  requirements.txt  setup.cfg
aircraft_data/airbus/a320/: __init__.json
aircraft_data/boeing/b738/: __init__.json
aircraft_data/boeing/b739/: __init__.json
docs/: exemple-route-b738-ULLI-to-UUEE.json
router/: aircraft.py  airport.py  flight.py
src/aircraft_data/manufacturers/: manufacturers.py
src/models/: aircraft.py  airport.py  api_client.py  flight.py
tests/: test_aircraft.py  test_api_client.py  test_flight.py
