[tool.poetry]
name = "flight-data-calculation"
version = "4.0.2"
description = "A project for planning flights and calculating flight parameters between two airports."
authors = ["onesch <vladimiravakov12345@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["flight", "calculation", "aviation", "airport"]
homepage = "https://github.com/onesch/flight-data-calculation"
repository = "https://github.com/onesch/flight-data-calculation"
packages = [
    { include = "models", from = "src" },
    { include = "aircraft_data", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
dotenv = "^0.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
flake8 = "^7.1.1"
black = "^24.10.0"
coverage = "^7.6.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
